--- a/activar/home.html
+++ b/activar/home.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Activitar, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Activitar | Template</title>
+    <title>Home</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,600,700,800,900&display=swap" rel="stylesheet">
@@ -114,13 +114,16 @@
         </div>
     </section>
     <!-- Hero End -->
-<div id="Corona_prevent_video_container">
-    
-      <iframe class="video_child" src='https://www.vlive.tv/embed/180468?autoPlay=true' frameborder='100' scrolling='no' marginwidth='0' marginheight='0' allowfullscreen></iframe>
-      <iframe class="video_child" src='https://www.vlive.tv/embed/180320?autoPlay=true' frameborder='no' scrolling='no' marginwidth='0' marginheight='0'  allowfullscreen></iframe>
-      <iframe class="video_child" src='https://www.vlive.tv/embed/180803?autoPlay=true' frameborder='no' scrolling='no' marginwidth='0' marginheight='0'  allowfullscreen></iframe>
-</div>
-   
+    <div id="Corona_prevent_video_container">
+
+        <iframe class="video_child" src='https://www.vlive.tv/embed/180468?autoPlay=false' frameborder='no'
+            scrolling='no' marginwidth='0' marginheight='0' allowfullscreen></iframe>
+        <iframe class="video_child" src='https://www.vlive.tv/embed/180320?autoPlay=false' frameborder='no'
+            scrolling='no' marginwidth='0' marginheight='0' allowfullscreen></iframe>
+        <iframe class="video_child" src='https://www.vlive.tv/embed/180803?autoPlay=false' frameborder='no'
+            scrolling='no' marginwidth='0' marginheight='0' allowfullscreen></iframe>
+    </div>
+
     <!-- Feature Section Begin -->
     <section class="feature-section">
         <div class="container-fluid">
@@ -184,7 +187,8 @@
                     <div class="col-lg-7 m-auto text-center">
                         <div class="section-title pl-lg-4 pr-lg-4 pl-0 pr-0">
                             <h2>Dịch Vụ</h2>
-                            <p>Our Crossfit experts can help you discover new training techniques and exercises that offer a dynamic and efficient full-body workout.</p>
+                            <p>Our Crossfit experts can help you discover new training techniques and exercises that
+                                offer a dynamic and efficient full-body workout.</p>
                         </div>
                     </div>
                 </div>
@@ -669,10 +673,11 @@
                     <div class="footer-logo-item">
                         <div class="f-logo">
                             <!-- LOGO -->
-                            <a href="#"><img src="" alt=""></a> 
+                            <a href="#"><img src="" alt=""></a>
                             <!-- LOGO -->
                         </div>
-                        <p>Chúng tôi xin cam kết sẽ đem lại những thông tin chính xác nhất và được cập nhật liên tục về dịch bệnh SARS-COV-2 trên Việt Nam và toàn thế giới.</p>
+                        <p>Chúng tôi xin cam kết sẽ đem lại những thông tin chính xác nhất và được cập nhật liên tục về
+                            dịch bệnh SARS-COV-2 trên Việt Nam và toàn thế giới.</p>
                         <div class="social-links">
                             <h6>Follow us</h6>
                             <a href="#"><i class="fa fa-facebook"></i></a>
@@ -742,8 +747,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 text-center">
-                        <div class="ct-inside"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved| <a href="https://colorlib.com/wp/templates/">Made with Colorlib</a> </div>
+                        <div class="ct-inside">
+                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                            Copyright &copy;
+                            <script>document.write(new Date().getFullYear());</script> All rights reserved| <a
+                                href="https://colorlib.com/wp/templates/">Made with Colorlib</a> </div>
                     </div>
                 </div>
             </div>
