--- a/activar/test2.html
+++ b/activar/test2.html
@@ -102,7 +102,8 @@
                         <br>
                         <button class="questbtn wrong">A. Chỉ khẩu trang y tế là đủ.</button>
                         <br>
-                        <button class="questbtn correct">B. Phải kết hợp với vệ sinh cá nhân, vệ sinh dụng cụ, vật dụng và rửa tay với xà phòng.</button>
+                        <button class="questbtn correct">B. Phải kết hợp với vệ sinh cá nhân, vệ sinh dụng cụ, vật dụng
+                            và rửa tay với xà phòng.</button>
                     </div>
                     <div>
                         <div class="quest">
@@ -117,12 +118,14 @@
                     <div>
                         <div class="quest">
                             <br>
-                            <h3>Câu 4: Sau khi sử dụng, để đảm bảo an toàn, không được xử lý khẩu trang theo cách nào?</h3>
+                            <h3>Câu 4: Sau khi sử dụng, để đảm bảo an toàn, không được xử lý khẩu trang theo cách nào?
+                            </h3>
                         </div>
                         <br>
                         <button class="questbtn correct">A. Chỉ cầm vào dây quai đeo qua tai để tháo.</button>
                         <br>
-                        <button class="questbtn wrong">B. Có thể dùng tay cầm trực tiếp vào bề mặt khẩu trang để tháo ra.</button>
+                        <button class="questbtn wrong">B. Có thể dùng tay cầm trực tiếp vào bề mặt khẩu trang để tháo
+                            ra.</button>
                     </div>
                     <div>
                         <div class="quest">
@@ -139,7 +142,7 @@
                     <div>
                         <div class="quest">
                             <br>
-                            <h3>Câu 6: Đeo khẩu trang có giúp tôi ngăn nhiễm khi chẳng may tiếp xúc 
+                            <h3>Câu 6: Đeo khẩu trang có giúp tôi ngăn nhiễm khi chẳng may tiếp xúc
                                 với người nhiễm virus corona không?</h3>
                         </div>
                         <br>
@@ -151,7 +154,7 @@
                         <div class="quest">
                             <br>
                             <h3>Câu 7: Sức khỏe ổn định và chưa từng tiếp xúc với đối tượng có nguy cơ nhiễm bệnh
-                                 thì có cần đeo khẩu trang không?</h3>
+                                thì có cần đeo khẩu trang không?</h3>
                         </div>
                         <br>
                         <button class="questbtn wrong">A. Vẫn bắt buộc phải đeo khẩu trang</button>
@@ -161,11 +164,12 @@
                     <div>
                         <div class="quest">
                             <br>
-                            <h3>Câu 8: Trẻ con thường không chịu đeo khẩu trang, vậy tôi cần làm gì để tránh 
+                            <h3>Câu 8: Trẻ con thường không chịu đeo khẩu trang, vậy tôi cần làm gì để tránh
                                 cho con bị lây nhiễm virus Corona?</h3>
                         </div>
                         <br>
-                        <button class="questbtn wrong">A. Trẻ em khó có thể bị mắc bệnh nên k cần thiết phải đeo khẩu trang</button>
+                        <button class="questbtn wrong">A. Trẻ em khó có thể bị mắc bệnh nên k cần thiết phải đeo khẩu
+                            trang</button>
                         <br>
                         <button class="questbtn correct ">B. Không cho trẻ tiếp xúc nơi đông người</button>
                     </div>
@@ -177,7 +181,7 @@
                         <br>
                         <button class="questbtn wrong">A. Có, nhất thiết phải đeo để phòng dịch</button>
                         <br>
-                        <button class="questbtn correct">B. Không cần thiết nhưng phải tuân thủ các biện pháp phòng 
+                        <button class="questbtn correct">B. Không cần thiết nhưng phải tuân thủ các biện pháp phòng
                             ngừa như hắt hơi che miệng bằng khuỷu tay,...</button>
                     </div>
                     <div>
@@ -188,7 +192,8 @@
                         <br>
                         <button class="questbtn correct">A. Người bình thường ngồi trong văn phòng làm việc</button>
                         <br>
-                        <button class="questbtn wrong">B. Người bình thường ở nơi có nguy cơ lây lan cao như khi đi phương tiện công cộng, đến bệnh viện</button>
+                        <button class="questbtn wrong">B. Người bình thường ở nơi có nguy cơ lây lan cao như khi đi
+                            phương tiện công cộng, đến bệnh viện</button>
                     </div>
                 </div>
             </div>
@@ -213,7 +218,9 @@
                         <div class="ti-pic">
                             <img src="img/test1.png" alt="">
                             <a href="test1.html">
-                                <button class="btn"><h3>Rửa, vệ sinh tay đúng cách</h3></button>
+                                <button class="btn">
+                                    <h3>Rửa, vệ sinh tay đúng cách</h3>
+                                </button>
                             </a>
                         </div>
                     </div>
@@ -223,8 +230,10 @@
                         <div class="ti-pic">
                             <img src="img/test2.png" alt="">
                             <a href="test2.html">
-                                <button class="btn"><h3>Đeo khẩu trang đúng cách</h3></button>
-                            </a>    
+                                <button class="btn">
+                                    <h3>Đeo khẩu trang đúng cách</h3>
+                                </button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -233,8 +242,10 @@
                         <div class="ti-pic">
                             <img src="img/test3.png" alt="">
                             <a href="test3.html">
-                                <button class="btn"><h3>Hiểu đúng về virus corana</h3></button>
-                            </a>                            
+                                <button class="btn">
+                                    <h3>Hiểu đúng về virus corana</h3>
+                                </button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -243,7 +254,9 @@
                         <div class="ti-pic">
                             <img src="img/test4.png" alt="">
                             <a href="test4.html">
-                                <button class="btn"><h3>Phòng virus trong gia đình</h3></button>
+                                <button class="btn">
+                                    <h3>Phòng virus trong gia đình</h3>
+                                </button>
                             </a>
                         </div>
                     </div>
@@ -255,75 +268,83 @@
 
 
     <!-- Footer Section Begin -->
+    <!-- Footer Section Begin -->
     <footer class="footer-section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-3">
                     <div class="footer-logo-item">
                         <div class="f-logo">
-                            <a href="#"><img src="img/LOGO-MINDX.png" alt=""></a>
+                            <!-- LOGO -->
+                            <a href="#"><img src="" alt=""></a>
+                            <!-- LOGO -->
                         </div>
-                        <p>Chúng tôi xin cam kết sẽ đem lại những thông tin chính xác nhất
-                            và được cập nhật liên tục về dịch bệnh SARS-COV-2 trên Việt Nam và toàn thế giới.
-                        </p>
+                        <p>Chúng tôi xin cam kết sẽ đem lại những thông tin chính xác nhất và được cập nhật liên tục về
+                            dịch bệnh SARS-COV-2 trên Việt Nam và toàn thế giới.</p>
+                        <div class="social-links">
+                            <h6>Follow us</h6>
+                            <a href="#"><i class="fa fa-facebook"></i></a>
+                            <a href="#"><i class="fa fa-twitter"></i></a>
+                            <a href="#"><i class="fa fa-google-plus"></i></a>
+                            <a href="#"><i class="fa fa-linkedin"></i></a>
+                            <a href="#"><i class="fa fa-instagram"></i></a>
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-3 offset-lg-1">
                     <div class="footer-widget">
-                        <h5>Our Blog</h5>
+                        <h5>Các bài viết</h5>
                         <div class="footer-blog">
                             <a href="#" class="fb-item">
-                                <h6>Most people who work</h6>
-                                <span class="blog-time"><i class="fa fa-clock-o"></i> Jan 02, 2019</span>
+                                <h6>Cách hiệu quả phòng chống bệnh</h6>
+                                <span class="blog-time"><i class="fa fa-clock-o"></i> Thứ 5,ngày 19,2020</span>
                             </a>
                             <a href="#" class="fb-item">
-                                <h6>Freelance Design Tricks How </h6>
-                                <span class="blog-time"><i class="fa fa-clock-o"></i> Jan 02, 2019</span>
+                                <h6>Làm sao để tránh bị ốm?</h6>
+                                <span class="blog-time"><i class="fa fa-clock-o"></i> Thứ 5,ngày 19,2020</span>
                             </a>
                             <a href="#" class="fb-item">
-                                <h6>have a computer at home have had </h6>
-                                <span class="blog-time"><i class="fa fa-clock-o"></i> Jan 02, 2019</span>
+                                <h6>Làm sao để vượt qua stress ? </h6>
+                                <span class="blog-time"><i class="fa fa-clock-o"></i> Thứ 5,ngày 19,2020</span>
                             </a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-2">
                     <div class="footer-widget">
-                        <h5>Program</h5>
+                        <h5>Chương trình</h5>
                         <ul class="workout-program">
-                            <li><a href="#">Bodybuilding</a></li>
-                            <li><a href="#">Running</a></li>
-                            <li><a href="#">Streching</a></li>
-                            <li><a href="#">Weight Loss</a></li>
-                            <li><a href="#">Gym Fitness</a></li>
+                            <li><a href="#">Tư vấn</a></li>
+                            <li><a href="#">Khám sức khỏe</a></li>
+                            <li><a href="#">Chăm sóc sức khỏe</a></li>
+                            <li><a href="#">Thiết bị y tế</a></li>
+                            <li><a href="#">Thực phẩm</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-lg-3">
                     <div class="footer-widget">
-                        <h5>Get Info</h5>
+                        <h5>Liên hệ:</h5>
                         <ul class="footer-info">
                             <li>
                                 <i class="fa fa-phone"></i>
-                                <span>SĐT đường dây nóng:</span>
-                                0353 005 670
+                                <span>Số điện thoại:</span>
+                                038.642.5197
                             </li>
                             <li>
                                 <i class="fa fa-envelope-o"></i>
                                 <span>Email:</span>
-                                contact.hoangdaothuy@mindx.edu.vn
+                                preventcovid_19@gmail.com
                             </li>
                             <li>
                                 <i class="fa fa-map-marker"></i>
-                                <span>Địa chỉ</span>
-                                29 T1 Hoàng Đạo Thúy
+                                <span>Địa chỉ:</span>
+                                Số 1, Đê La Thành, Hà Nội
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
-        </div>
-        
         </div>
     </footer>
     <!-- Footer Section End -->
