--- a/activar/phòng chống.html
+++ b/activar/phòng chống.html
@@ -142,7 +142,8 @@
                         <img src="img/prevent1/Phòng3.jpg" alt="">
                         <div class="gi-hover-warp">
                             <div class="gi-hover">
-                                <a href="img/prevent2/Phòng3.jpg" class="image-popup"><i class="fa fa-search-plus"></i></a>
+                                <a href="img/prevent2/Phòng3.jpg" class="image-popup"><i
+                                        class="fa fa-search-plus"></i></a>
                                 <a href="#"><i class="fa fa-chain"></i></a>
                                 <h6>Cách phòng chống virus SARS-CoV-2 <span>Rửa tay, Đeo khẩu trang, Vệ sinh</span></h6>
                             </div>
@@ -154,7 +155,8 @@
                         <img src="img/prevent1/Phòng6.jpg" alt="">
                         <div class="gi-hover-warp">
                             <div class="gi-hover">
-                                <a href="img/prevent2/Phòng6.jpg" class="image-popup"><i class="fa fa-search-plus"></i></a>
+                                <a href="img/prevent2/Phòng6.jpg" class="image-popup"><i
+                                        class="fa fa-search-plus"></i></a>
                                 <a href="#"><i class="fa fa-chain"></i></a>
                                 <h6>Cách phòng chống virus SARS-CoV-2 <span>Rửa tay, Đeo khẩu trang, Vệ sinh</span></h6>
                             </div>
@@ -166,7 +168,8 @@
                         <img src="img/prevent1/Phòng1.jpg" alt="">
                         <div class="gi-hover-warp">
                             <div class="gi-hover">
-                                <a href="img/prevent2/Phòng1.jpg" class="image-popup"><i class="fa fa-search-plus"></i></a>
+                                <a href="img/prevent2/Phòng1.jpg" class="image-popup"><i
+                                        class="fa fa-search-plus"></i></a>
                                 <a href="#"><i class="fa fa-chain"></i></a>
                                 <h6>Cách phòng chống virus SARS-CoV-2 <span>Rửa tay, Đeo khẩu trang, Vệ sinh</span></h6>
                             </div>
@@ -178,7 +181,8 @@
                         <img src="img/prevent1/Phòng9.jpg" alt="">
                         <div class="gi-hover-warp">
                             <div class="gi-hover">
-                                <a href="img/prevent2/Phòng9.jpg" class="image-popup"><i class="fa fa-search-plus"></i></a>
+                                <a href="img/prevent2/Phòng9.jpg" class="image-popup"><i
+                                        class="fa fa-search-plus"></i></a>
                                 <a href="#"><i class="fa fa-chain"></i></a>
                                 <h6>Cách phòng chống virus SARS-CoV-2 <span>Rửa tay, Đeo khẩu trang, Vệ sinh</span></h6>
                             </div>
@@ -190,7 +194,8 @@
                         <img src="img/prevent1/Phòng10.jpg" alt="">
                         <div class="gi-hover-warp">
                             <div class="gi-hover">
-                                <a href="img/prevent2/Phòng10.jpg" class="image-popup"><i class="fa fa-search-plus"></i></a>
+                                <a href="img/prevent2/Phòng10.jpg" class="image-popup"><i
+                                        class="fa fa-search-plus"></i></a>
                                 <a href="#"><i class="fa fa-chain"></i></a>
                                 <h6>Cách phòng chống virus SARS-CoV-2 <span>Rửa tay, Đeo khẩu trang, Vệ sinh</span></h6>
                             </div>
@@ -202,7 +207,8 @@
                         <img src="img/prevent1/Phòng2.jpg" alt="">
                         <div class="gi-hover-warp">
                             <div class="gi-hover">
-                                <a href="img/prevent2/Phòng2.jpg" class="image-popup"><i class="fa fa-search-plus"></i></a>
+                                <a href="img/prevent2/Phòng2.jpg" class="image-popup"><i
+                                        class="fa fa-search-plus"></i></a>
                                 <a href="#"><i class="fa fa-chain"></i></a>
                                 <h6>Cách phòng chống virus SARS-CoV-2 <span>Rửa tay, Đeo khẩu trang, Vệ sinh</span></h6>
                             </div>
@@ -214,7 +220,8 @@
                         <img src="img/prevent1/Phòng4.jpg" alt="">
                         <div class="gi-hover-warp">
                             <div class="gi-hover">
-                                <a href="img/prevent2/Phòng4.jpg" class="image-popup"><i class="fa fa-search-plus"></i></a>
+                                <a href="img/prevent2/Phòng4.jpg" class="image-popup"><i
+                                        class="fa fa-search-plus"></i></a>
                                 <a href="#"><i class="fa fa-chain"></i></a>
                                 <h6>Cách phòng chống virus SARS-CoV-2 <span>Rửa tay, Đeo khẩu trang, Vệ sinh</span></h6>
                             </div>
@@ -226,7 +233,8 @@
                         <img src="img/prevent1/Phòng8.jpg" alt="">
                         <div class="gi-hover-warp">
                             <div class="gi-hover">
-                                <a href="img/prevent2/Phòng8.jpg" class="image-popup"><i class="fa fa-search-plus"></i></a>
+                                <a href="img/prevent2/Phòng8.jpg" class="image-popup"><i
+                                        class="fa fa-search-plus"></i></a>
                                 <a href="#"><i class="fa fa-chain"></i></a>
                                 <h6>Cách phòng chống virus SARS-CoV-2 <span>Rửa tay, Đeo khẩu trang, Vệ sinh</span></h6>
                             </div>
@@ -238,7 +246,8 @@
                         <img src="img/prevent1/Phòng13.png" alt="">
                         <div class="gi-hover-warp">
                             <div class="gi-hover">
-                                <a href="img/prevent2/Phòng13.png" class="image-popup"><i class="fa fa-search-plus"></i></a>
+                                <a href="img/prevent2/Phòng13.png" class="image-popup"><i
+                                        class="fa fa-search-plus"></i></a>
                                 <a href="#"><i class="fa fa-chain"></i></a>
                                 <h6>Cách phòng chống virus SARS-CoV-2 <span>Rửa tay, Đeo khẩu trang, Vệ sinh</span></h6>
                             </div>
@@ -250,7 +259,8 @@
                         <img src="img/prevent1/Phòng5.jpg" alt="">
                         <div class="gi-hover-warp">
                             <div class="gi-hover">
-                                <a href="img/prevent2/Phòng5.jpg" class="image-popup"><i class="fa fa-search-plus"></i></a>
+                                <a href="img/prevent2/Phòng5.jpg" class="image-popup"><i
+                                        class="fa fa-search-plus"></i></a>
                                 <a href="#"><i class="fa fa-chain"></i></a>
                                 <h6>Cách phòng chống virus SARS-CoV-2 <span>Rửa tay, Đeo khẩu trang, Vệ sinh</span></h6>
                             </div>
@@ -262,7 +272,8 @@
                         <img src="img/prevent1/Phòng11.png" alt="">
                         <div class="gi-hover-warp">
                             <div class="gi-hover">
-                                <a href="img/prevent2/Phòng11.png" class="image-popup"><i class="fa fa-search-plus"></i></a>
+                                <a href="img/prevent2/Phòng11.png" class="image-popup"><i
+                                        class="fa fa-search-plus"></i></a>
                                 <a href="#"><i class="fa fa-chain"></i></a>
                                 <h6>Cách phòng chống virus SARS-CoV-2 <span>Rửa tay, Đeo khẩu trang, Vệ sinh</span></h6>
                             </div>
@@ -274,7 +285,8 @@
                         <img src="img/prevent1/Phòng14.jpeg" alt="">
                         <div class="gi-hover-warp">
                             <div class="gi-hover">
-                                <a href="img/prevent2/Phòng14.jpeg" class="image-popup"><i class="fa fa-search-plus"></i></a>
+                                <a href="img/prevent2/Phòng14.jpeg" class="image-popup"><i
+                                        class="fa fa-search-plus"></i></a>
                                 <a href="#"><i class="fa fa-chain"></i></a>
                                 <h6>Cách phòng chống virus SARS-CoV-2 <span>Rửa tay, Đeo khẩu trang, Vệ sinh</span></h6>
                             </div>
@@ -286,7 +298,8 @@
                         <img src="img/prevent1/Phòng12.png" alt="">
                         <div class="gi-hover-warp">
                             <div class="gi-hover">
-                                <a href="img/prevent2/Phòng12.png" class="image-popup"><i class="fa fa-search-plus"></i></a>
+                                <a href="img/prevent2/Phòng12.png" class="image-popup"><i
+                                        class="fa fa-search-plus"></i></a>
                                 <a href="#"><i class="fa fa-chain"></i></a>
                                 <h6>Cách phòng chống virus SARS-CoV-2 <span>Rửa tay, Đeo khẩu trang, Vệ sinh</span></h6>
                             </div>
@@ -298,7 +311,8 @@
                         <img src="img/prevent1/Phòng7.png" alt="">
                         <div class="gi-hover-warp">
                             <div class="gi-hover">
-                                <a href="img/prevent2/Phòng7.png" class="image-popup"><i class="fa fa-search-plus"></i></a>
+                                <a href="img/prevent2/Phòng7.png" class="image-popup"><i
+                                        class="fa fa-search-plus"></i></a>
                                 <a href="#"><i class="fa fa-chain"></i></a>
                                 <h6>Cách phòng chống virus SARS-CoV-2 <span>Rửa tay, Đeo khẩu trang, Vệ sinh</span></h6>
                             </div>
@@ -310,14 +324,15 @@
                         <img src="img/prevent1/Phòng15.jpg" alt="">
                         <div class="gi-hover-warp">
                             <div class="gi-hover">
-                                <a href="img/prevent2/Phòng15.jpg" class="image-popup"><i class="fa fa-search-plus"></i></a>
+                                <a href="img/prevent2/Phòng15.jpg" class="image-popup"><i
+                                        class="fa fa-search-plus"></i></a>
                                 <a href="#"><i class="fa fa-chain"></i></a>
                                 <h6>Cách phòng chống virus SARS-CoV-2 <span>Rửa tay, Đeo khẩu trang, Vệ sinh</span></h6>
                             </div>
                         </div>
                     </div>
                 </div>
-                
+
             </div>
         </div>
     </section>
@@ -330,69 +345,76 @@
                 <div class="col-lg-3">
                     <div class="footer-logo-item">
                         <div class="f-logo">
-                            <a href="#"><img src="img/LOGO-MINDX.png" alt=""></a>
+                            <!-- LOGO -->
+                            <a href="#"><img src="" alt=""></a>
+                            <!-- LOGO -->
                         </div>
-                        <p>Chúng tôi xin cam kết sẽ đem lại những thông tin chính xác nhất
-                            và được cập nhật liên tục về dịch bệnh SARS-COV-2 trên Việt Nam và toàn thế giới.
-                        </p>
+                        <p>Chúng tôi xin cam kết sẽ đem lại những thông tin chính xác nhất và được cập nhật liên tục về
+                            dịch bệnh SARS-COV-2 trên Việt Nam và toàn thế giới.</p>
+                        <div class="social-links">
+                            <h6>Follow us</h6>
+                            <a href="#"><i class="fa fa-facebook"></i></a>
+                            <a href="#"><i class="fa fa-twitter"></i></a>
+                            <a href="#"><i class="fa fa-google-plus"></i></a>
+                            <a href="#"><i class="fa fa-linkedin"></i></a>
+                            <a href="#"><i class="fa fa-instagram"></i></a>
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-3 offset-lg-1">
                     <div class="footer-widget">
-                        <h5>Our Blog</h5>
+                        <h5>Các bài viết</h5>
                         <div class="footer-blog">
                             <a href="#" class="fb-item">
-                                <h6>Most people who work</h6>
-                                <span class="blog-time"><i class="fa fa-clock-o"></i> Jan 02, 2019</span>
+                                <h6>Cách hiệu quả phòng chống bệnh</h6>
+                                <span class="blog-time"><i class="fa fa-clock-o"></i> Thứ 5,ngày 19,2020</span>
                             </a>
                             <a href="#" class="fb-item">
-                                <h6>Freelance Design Tricks How </h6>
-                                <span class="blog-time"><i class="fa fa-clock-o"></i> Jan 02, 2019</span>
+                                <h6>Làm sao để tránh bị ốm?</h6>
+                                <span class="blog-time"><i class="fa fa-clock-o"></i> Thứ 5,ngày 19,2020</span>
                             </a>
                             <a href="#" class="fb-item">
-                                <h6>have a computer at home have had </h6>
-                                <span class="blog-time"><i class="fa fa-clock-o"></i> Jan 02, 2019</span>
+                                <h6>Làm sao để vượt qua stress ? </h6>
+                                <span class="blog-time"><i class="fa fa-clock-o"></i> Thứ 5,ngày 19,2020</span>
                             </a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-2">
                     <div class="footer-widget">
-                        <h5>Program</h5>
+                        <h5>Chương trình</h5>
                         <ul class="workout-program">
-                            <li><a href="#">Bodybuilding</a></li>
-                            <li><a href="#">Running</a></li>
-                            <li><a href="#">Streching</a></li>
-                            <li><a href="#">Weight Loss</a></li>
-                            <li><a href="#">Gym Fitness</a></li>
+                            <li><a href="#">Tư vấn</a></li>
+                            <li><a href="#">Khám sức khỏe</a></li>
+                            <li><a href="#">Chăm sóc sức khỏe</a></li>
+                            <li><a href="#">Thiết bị y tế</a></li>
+                            <li><a href="#">Thực phẩm</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-lg-3">
                     <div class="footer-widget">
-                        <h5>Get Info</h5>
+                        <h5>Liên hệ:</h5>
                         <ul class="footer-info">
                             <li>
                                 <i class="fa fa-phone"></i>
-                                <span>SĐT đường dây nóng:</span>
-                                0353 005 670
+                                <span>Số điện thoại:</span>
+                                038.642.5197
                             </li>
                             <li>
                                 <i class="fa fa-envelope-o"></i>
                                 <span>Email:</span>
-                                contact.hoangdaothuy@mindx.edu.vn
+                                preventcovid_19@gmail.com
                             </li>
                             <li>
                                 <i class="fa fa-map-marker"></i>
-                                <span>Địa chỉ</span>
-                                29 T1 Hoàng Đạo Thúy
+                                <span>Địa chỉ:</span>
+                                Số 1, Đê La Thành, Hà Nội
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
-        </div>
-        
         </div>
     </footer>
     <!-- Footer Section End -->
