--- a/activar/test1.html
+++ b/activar/test1.html
@@ -117,18 +117,20 @@
                     <div>
                         <div class="quest">
                             <br>
-                            <h3>Câu 4: Nên ưu tiên rửa tay bằng xà phòng với nước hay sử dụng 
+                            <h3>Câu 4: Nên ưu tiên rửa tay bằng xà phòng với nước hay sử dụng
                                 nước rửa tay khô?</h3>
                         </div>
                         <br>
-                        <button class="questbtn correct">A. Rửa tay dưới vòi nước với xà phòng là cách đơn giản và hiệu quả nhất</button>
+                        <button class="questbtn correct">A. Rửa tay dưới vòi nước với xà phòng là cách đơn giản và hiệu
+                            quả nhất</button>
                         <br>
                         <button class="questbtn wrong">B. Nước rửa tay khô/cồn khô tốt hơn</button>
                     </div>
                     <div>
                         <div class="quest">
                             <br>
-                            <h3>Câu 5: Sau mỗi lần cầm nắm vật dụng thường được động chạm, có cần phải rửa tay ngay không?</h3>
+                            <h3>Câu 5: Sau mỗi lần cầm nắm vật dụng thường được động chạm, có cần phải rửa tay ngay
+                                không?</h3>
                         </div>
                         <br>
                         <button class="questbtn correct">A. Có</button>
@@ -138,7 +140,8 @@
                     <div>
                         <div class="quest">
                             <br>
-                            <h3>Câu 6: Khi rửa tay có nhất thiết phải dùng các sản phẩm tiệt trùng không hay có thể rửa bằng xà phòng thường?</h3>
+                            <h3>Câu 6: Khi rửa tay có nhất thiết phải dùng các sản phẩm tiệt trùng không hay có thể rửa
+                                bằng xà phòng thường?</h3>
                         </div>
                         <br>
                         <button class="questbtn correct">A. Không nhất thiết dùng sản phẩm tiệt trùng</button>
@@ -148,20 +151,24 @@
                     <div>
                         <div class="quest">
                             <br>
-                            <h3>Câu 7: Khi ho đã che miệng nhưng không có điều kiện rửa tay ngay thì nên làm như thế nào khi tiếp xúc với người khác?</h3>
+                            <h3>Câu 7: Khi ho đã che miệng nhưng không có điều kiện rửa tay ngay thì nên làm như thế nào
+                                khi tiếp xúc với người khác?</h3>
                         </div>
                         <br>
                         <button class="questbtn wrong">A. Lau tay bằng giấy ăn</button>
                         <br>
-                        <button class="questbtn correct">B. Nhất thiết không tiếp xúc, chạm tay vào ai cho đến khi có điều kiện rửa tay</button>
+                        <button class="questbtn correct">B. Nhất thiết không tiếp xúc, chạm tay vào ai cho đến khi có
+                            điều kiện rửa tay</button>
                     </div>
                     <div>
                         <div class="quest">
                             <br>
-                            <h3>Câu 8: Nên rửa tay bằng nước rửa tay sát khuẩn, nhưng trong đó lại có cồn, có an toàn với trẻ em không?</h3>
+                            <h3>Câu 8: Nên rửa tay bằng nước rửa tay sát khuẩn, nhưng trong đó lại có cồn, có an toàn
+                                với trẻ em không?</h3>
                         </div>
                         <br>
-                        <button class="questbtn correct">A. Trẻ em sử dụng được nước rửa tay có cồn nhưng chỉ là loại 70%</button>
+                        <button class="questbtn correct">A. Trẻ em sử dụng được nước rửa tay có cồn nhưng chỉ là loại
+                            70%</button>
                         <br>
                         <button class="questbtn wrong">B. Được, nước sát khuẩn có cồn không những an toàn cho trẻ nhỏ
                             mà còn giúp diệt sạch vi khuẩn
@@ -173,9 +180,11 @@
                             <h3>Câu 9: Rửa tay như nào sẽ đảm bảo đã rửa tay sạch?</h3>
                         </div>
                         <br>
-                        <button class="questbtn wrong">A. Miễn rửa tay với nước và xà phòng là được, bất kể trong bao lâu</button>
+                        <button class="questbtn wrong">A. Miễn rửa tay với nước và xà phòng là được, bất kể trong bao
+                            lâu</button>
                         <br>
-                        <button class="questbtn correct">B. Theo quy trình rửa tay thường quy 6 bước khuyến cáo bởi Bộ Y Tế để không bỏ sót bất cứ vị trí nào trên tay</button>
+                        <button class="questbtn correct">B. Theo quy trình rửa tay thường quy 6 bước khuyến cáo bởi Bộ Y
+                            Tế để không bỏ sót bất cứ vị trí nào trên tay</button>
                     </div>
                     <div>
                         <div class="quest">
@@ -210,7 +219,9 @@
                         <div class="ti-pic">
                             <img src="img/test1.png" alt="">
                             <a href="test1.html">
-                                <button class="btn"><h3>Rửa, vệ sinh tay đúng cách</h3></button>
+                                <button class="btn">
+                                    <h3>Rửa, vệ sinh tay đúng cách</h3>
+                                </button>
                             </a>
                         </div>
                     </div>
@@ -220,8 +231,10 @@
                         <div class="ti-pic">
                             <img src="img/test2.png" alt="">
                             <a href="test2.html">
-                                <button class="btn"><h3>Đeo khẩu trang đúng cách</h3></button>
-                            </a>    
+                                <button class="btn">
+                                    <h3>Đeo khẩu trang đúng cách</h3>
+                                </button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -230,8 +243,10 @@
                         <div class="ti-pic">
                             <img src="img/test3.png" alt="">
                             <a href="test3.html">
-                                <button class="btn"><h3>Hiểu đúng về virus corana</h3></button>
-                            </a>                            
+                                <button class="btn">
+                                    <h3>Hiểu đúng về virus corana</h3>
+                                </button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -240,7 +255,9 @@
                         <div class="ti-pic">
                             <img src="img/test4.png" alt="">
                             <a href="test4.html">
-                                <button class="btn"><h3>Phòng virus trong gia đình</h3></button>
+                                <button class="btn">
+                                    <h3>Phòng virus trong gia đình</h3>
+                                </button>
                             </a>
                         </div>
                     </div>
@@ -320,22 +337,100 @@
                 </div>
             </div>
         </div>
-        
-        </div>
-    </footer>
-    <!-- Footer Section End -->
 
-    <!-- Js Plugins -->
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/mixitup.min.js"></script>
-    <script src="js/jquery.nice-select.min.js"></script>
-    <script src="js/jquery.slicknav.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/masonry.pkgd.min.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/test.js"></script>
+        </div> <!-- Footer Section Begin -->
+        <footer class="footer-section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-3">
+                        <div class="footer-logo-item">
+                            <div class="f-logo">
+                                <!-- LOGO -->
+                                <a href="#"><img src="" alt=""></a>
+                                <!-- LOGO -->
+                            </div>
+                            <p>Chúng tôi xin cam kết sẽ đem lại những thông tin chính xác nhất và được cập nhật liên tục
+                                về
+                                dịch bệnh SARS-COV-2 trên Việt Nam và toàn thế giới.</p>
+                            <div class="social-links">
+                                <h6>Follow us</h6>
+                                <a href="#"><i class="fa fa-facebook"></i></a>
+                                <a href="#"><i class="fa fa-twitter"></i></a>
+                                <a href="#"><i class="fa fa-google-plus"></i></a>
+                                <a href="#"><i class="fa fa-linkedin"></i></a>
+                                <a href="#"><i class="fa fa-instagram"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 offset-lg-1">
+                        <div class="footer-widget">
+                            <h5>Các bài viết</h5>
+                            <div class="footer-blog">
+                                <a href="#" class="fb-item">
+                                    <h6>Cách hiệu quả phòng chống bệnh</h6>
+                                    <span class="blog-time"><i class="fa fa-clock-o"></i> Thứ 5,ngày 19,2020</span>
+                                </a>
+                                <a href="#" class="fb-item">
+                                    <h6>Làm sao để tránh bị ốm?</h6>
+                                    <span class="blog-time"><i class="fa fa-clock-o"></i> Thứ 5,ngày 19,2020</span>
+                                </a>
+                                <a href="#" class="fb-item">
+                                    <h6>Làm sao để vượt qua stress ? </h6>
+                                    <span class="blog-time"><i class="fa fa-clock-o"></i> Thứ 5,ngày 19,2020</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-2">
+                        <div class="footer-widget">
+                            <h5>Chương trình</h5>
+                            <ul class="workout-program">
+                                <li><a href="#">Tư vấn</a></li>
+                                <li><a href="#">Khám sức khỏe</a></li>
+                                <li><a href="#">Chăm sóc sức khỏe</a></li>
+                                <li><a href="#">Thiết bị y tế</a></li>
+                                <li><a href="#">Thực phẩm</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="footer-widget">
+                            <h5>Liên hệ:</h5>
+                            <ul class="footer-info">
+                                <li>
+                                    <i class="fa fa-phone"></i>
+                                    <span>Số điện thoại:</span>
+                                    038.642.5197
+                                </li>
+                                <li>
+                                    <i class="fa fa-envelope-o"></i>
+                                    <span>Email:</span>
+                                    preventcovid_19@gmail.com
+                                </li>
+                                <li>
+                                    <i class="fa fa-map-marker"></i>
+                                    <span>Địa chỉ:</span>
+                                    Số 1, Đê La Thành, Hà Nội
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <!-- Footer Section End -->
+
+        <!-- Js Plugins -->
+        <script src="js/jquery-3.3.1.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/jquery.magnific-popup.min.js"></script>
+        <script src="js/mixitup.min.js"></script>
+        <script src="js/jquery.nice-select.min.js"></script>
+        <script src="js/jquery.slicknav.js"></script>
+        <script src="js/owl.carousel.min.js"></script>
+        <script src="js/masonry.pkgd.min.js"></script>
+        <script src="js/main.js"></script>
+        <script src="js/test.js"></script>
 </body>
 
 </html>
