--- a/activar/test3.html
+++ b/activar/test3.html
@@ -90,11 +90,11 @@
                             <h3>Câu 1: Virus Corona lây lan như thế nào?</h3>
                         </div>
                         <br>
-                        <button class="questbtn correct">A. Virus này ban đầu xuất hiện từ nguồn động vật nhưng 
-                            có khả năng lây lan từ người sang người thông qua tiếp xúc với dịch cơ thể của người 
+                        <button class="questbtn correct">A. Virus này ban đầu xuất hiện từ nguồn động vật nhưng
+                            có khả năng lây lan từ người sang người thông qua tiếp xúc với dịch cơ thể của người
                             bệnh (chất thải; nước bọt;...)</button>
                         <br>
-                        <button class="questbtn wrong">A. Virus này ban đầu xuất hiện từ nguồn thực vật, không có 
+                        <button class="questbtn wrong">A. Virus này ban đầu xuất hiện từ nguồn thực vật, không có
                             khả năng lây lan từ người sang người</button>
                     </div>
                     <div>
@@ -110,7 +110,8 @@
                     <div>
                         <div class="quest">
                             <br>
-                            <h3>Câu 3: Tính đến thời điểm hiện tại, đã có thuốc đặc hiệu phòng và điều trị virus Corona mới chưa?</h3>
+                            <h3>Câu 3: Tính đến thời điểm hiện tại, đã có thuốc đặc hiệu phòng và điều trị virus Corona
+                                mới chưa?</h3>
                         </div>
                         <br>
                         <button class="questbtn wrong">A. Đã có</button>
@@ -170,7 +171,8 @@
                     <div>
                         <div class="quest">
                             <br>
-                            <h3>Câu 9: Sốt cao (trên 40 độ) nhưng không đau họng, đó có phải triệu chứng của virus Corona hay không?</h3>
+                            <h3>Câu 9: Sốt cao (trên 40 độ) nhưng không đau họng, đó có phải triệu chứng của virus
+                                Corona hay không?</h3>
                         </div>
                         <br>
                         <button class="questbtn wrong">A. Chắc chắn là không</button>
@@ -180,7 +182,8 @@
                     <div>
                         <div class="quest">
                             <br>
-                            <h3>Câu 10: Theo bạn, khoảng cách an toàn khi ở cạnh người ho, sốt nghi nhiễm Covid-19 là bao nhiêu?</h3>
+                            <h3>Câu 10: Theo bạn, khoảng cách an toàn khi ở cạnh người ho, sốt nghi nhiễm Covid-19 là
+                                bao nhiêu?</h3>
                         </div>
                         <br>
                         <button class="questbtn correct">A. Ít nhất 2m</button>
@@ -210,7 +213,9 @@
                         <div class="ti-pic">
                             <img src="img/test1.png" alt="">
                             <a href="test1.html">
-                                <button class="btn"><h3>Rửa, vệ sinh tay đúng cách</h3></button>
+                                <button class="btn">
+                                    <h3>Rửa, vệ sinh tay đúng cách</h3>
+                                </button>
                             </a>
                         </div>
                     </div>
@@ -220,8 +225,10 @@
                         <div class="ti-pic">
                             <img src="img/test2.png" alt="">
                             <a href="test2.html">
-                                <button class="btn"><h3>Đeo khẩu trang đúng cách</h3></button>
-                            </a>    
+                                <button class="btn">
+                                    <h3>Đeo khẩu trang đúng cách</h3>
+                                </button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -230,8 +237,10 @@
                         <div class="ti-pic">
                             <img src="img/test3.png" alt="">
                             <a href="test3.html">
-                                <button class="btn"><h3>Hiểu đúng về virus corana</h3></button>
-                            </a>                            
+                                <button class="btn">
+                                    <h3>Hiểu đúng về virus corana</h3>
+                                </button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -240,7 +249,9 @@
                         <div class="ti-pic">
                             <img src="img/test4.png" alt="">
                             <a href="test4.html">
-                                <button class="btn"><h3>Phòng virus trong gia đình</h3></button>
+                                <button class="btn">
+                                    <h3>Phòng virus trong gia đình</h3>
+                                </button>
                             </a>
                         </div>
                     </div>
@@ -252,75 +263,83 @@
 
 
     <!-- Footer Section Begin -->
+    <!-- Footer Section Begin -->
     <footer class="footer-section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-3">
                     <div class="footer-logo-item">
                         <div class="f-logo">
-                            <a href="#"><img src="img/LOGO-MINDX.png" alt=""></a>
+                            <!-- LOGO -->
+                            <a href="#"><img src="" alt=""></a>
+                            <!-- LOGO -->
                         </div>
-                        <p>Chúng tôi xin cam kết sẽ đem lại những thông tin chính xác nhất
-                            và được cập nhật liên tục về dịch bệnh SARS-COV-2 trên Việt Nam và toàn thế giới.
-                        </p>
+                        <p>Chúng tôi xin cam kết sẽ đem lại những thông tin chính xác nhất và được cập nhật liên tục về
+                            dịch bệnh SARS-COV-2 trên Việt Nam và toàn thế giới.</p>
+                        <div class="social-links">
+                            <h6>Follow us</h6>
+                            <a href="#"><i class="fa fa-facebook"></i></a>
+                            <a href="#"><i class="fa fa-twitter"></i></a>
+                            <a href="#"><i class="fa fa-google-plus"></i></a>
+                            <a href="#"><i class="fa fa-linkedin"></i></a>
+                            <a href="#"><i class="fa fa-instagram"></i></a>
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-3 offset-lg-1">
                     <div class="footer-widget">
-                        <h5>Our Blog</h5>
+                        <h5>Các bài viết</h5>
                         <div class="footer-blog">
                             <a href="#" class="fb-item">
-                                <h6>Most people who work</h6>
-                                <span class="blog-time"><i class="fa fa-clock-o"></i> Jan 02, 2019</span>
+                                <h6>Cách hiệu quả phòng chống bệnh</h6>
+                                <span class="blog-time"><i class="fa fa-clock-o"></i> Thứ 5,ngày 19,2020</span>
                             </a>
                             <a href="#" class="fb-item">
-                                <h6>Freelance Design Tricks How </h6>
-                                <span class="blog-time"><i class="fa fa-clock-o"></i> Jan 02, 2019</span>
+                                <h6>Làm sao để tránh bị ốm?</h6>
+                                <span class="blog-time"><i class="fa fa-clock-o"></i> Thứ 5,ngày 19,2020</span>
                             </a>
                             <a href="#" class="fb-item">
-                                <h6>have a computer at home have had </h6>
-                                <span class="blog-time"><i class="fa fa-clock-o"></i> Jan 02, 2019</span>
+                                <h6>Làm sao để vượt qua stress ? </h6>
+                                <span class="blog-time"><i class="fa fa-clock-o"></i> Thứ 5,ngày 19,2020</span>
                             </a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-2">
                     <div class="footer-widget">
-                        <h5>Program</h5>
+                        <h5>Chương trình</h5>
                         <ul class="workout-program">
-                            <li><a href="#">Bodybuilding</a></li>
-                            <li><a href="#">Running</a></li>
-                            <li><a href="#">Streching</a></li>
-                            <li><a href="#">Weight Loss</a></li>
-                            <li><a href="#">Gym Fitness</a></li>
+                            <li><a href="#">Tư vấn</a></li>
+                            <li><a href="#">Khám sức khỏe</a></li>
+                            <li><a href="#">Chăm sóc sức khỏe</a></li>
+                            <li><a href="#">Thiết bị y tế</a></li>
+                            <li><a href="#">Thực phẩm</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-lg-3">
                     <div class="footer-widget">
-                        <h5>Get Info</h5>
+                        <h5>Liên hệ:</h5>
                         <ul class="footer-info">
                             <li>
                                 <i class="fa fa-phone"></i>
-                                <span>SĐT đường dây nóng:</span>
-                                0353 005 670
+                                <span>Số điện thoại:</span>
+                                038.642.5197
                             </li>
                             <li>
                                 <i class="fa fa-envelope-o"></i>
                                 <span>Email:</span>
-                                contact.hoangdaothuy@mindx.edu.vn
+                                preventcovid_19@gmail.com
                             </li>
                             <li>
                                 <i class="fa fa-map-marker"></i>
-                                <span>Địa chỉ</span>
-                                29 T1 Hoàng Đạo Thúy
+                                <span>Địa chỉ:</span>
+                                Số 1, Đê La Thành, Hà Nội
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
-        </div>
-        
         </div>
     </footer>
     <!-- Footer Section End -->
