--- a/activar/thông tin.html
+++ b/activar/thông tin.html
@@ -236,75 +236,86 @@
     <!-- Trainer Section End -->
 
 
-    <!-- Footer Section Begin -->
-    <footer class="footer-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3">
-                    <div class="footer-logo-item">
-                        <div class="f-logo">
-                            <a href="#"><img src="img/LOGO-MINDX.png" alt=""></a>
-                        </div>
-                        <p>Chúng tôi xin cam kết sẽ đem lại những thông tin chính xác nhất
-                            và được cập nhật liên tục về dịch bệnh SARS-COV-2 trên Việt Nam và toàn thế giới.
-                        </p>
-                    </div>
-                </div>
-                <div class="col-lg-3 offset-lg-1">
-                    <div class="footer-widget">
-                        <h5>Our Blog</h5>
-                        <div class="footer-blog">
-                            <a href="#" class="fb-item">
-                                <h6>Most people who work</h6>
-                                <span class="blog-time"><i class="fa fa-clock-o"></i> Jan 02, 2019</span>
-                            </a>
-                            <a href="#" class="fb-item">
-                                <h6>Freelance Design Tricks How </h6>
-                                <span class="blog-time"><i class="fa fa-clock-o"></i> Jan 02, 2019</span>
-                            </a>
-                            <a href="#" class="fb-item">
-                                <h6>have a computer at home have had </h6>
-                                <span class="blog-time"><i class="fa fa-clock-o"></i> Jan 02, 2019</span>
-                            </a>
+        <!-- Footer Section Begin -->
+        <footer class="footer-section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-3">
+                        <div class="footer-logo-item">
+                            <div class="f-logo">
+                                <!-- LOGO -->
+                                <a href="#"><img src="" alt=""></a>
+                                <!-- LOGO -->
+                            </div>
+                            <p>Chúng tôi xin cam kết sẽ đem lại những thông tin chính xác nhất và được cập nhật liên tục về
+                                dịch bệnh SARS-COV-2 trên Việt Nam và toàn thế giới.</p>
+                            <div class="social-links">
+                                <h6>Follow us</h6>
+                                <a href="#"><i class="fa fa-facebook"></i></a>
+                                <a href="#"><i class="fa fa-twitter"></i></a>
+                                <a href="#"><i class="fa fa-google-plus"></i></a>
+                                <a href="#"><i class="fa fa-linkedin"></i></a>
+                                <a href="#"><i class="fa fa-instagram"></i></a>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-2">
-                    <div class="footer-widget">
-                        <h5>Program</h5>
-                        <ul class="workout-program">
-                            <li><a href="#">Bodybuilding</a></li>
-                            <li><a href="#">Running</a></li>
-                            <li><a href="#">Streching</a></li>
-                            <li><a href="#">Weight Loss</a></li>
-                            <li><a href="#">Gym Fitness</a></li>
-                        </ul>
+                    <div class="col-lg-3 offset-lg-1">
+                        <div class="footer-widget">
+                            <h5>Các bài viết</h5>
+                            <div class="footer-blog">
+                                <a href="#" class="fb-item">
+                                    <h6>Cách hiệu quả phòng chống bệnh</h6>
+                                    <span class="blog-time"><i class="fa fa-clock-o"></i> Thứ 5,ngày 19,2020</span>
+                                </a>
+                                <a href="#" class="fb-item">
+                                    <h6>Làm sao để tránh bị ốm?</h6>
+                                    <span class="blog-time"><i class="fa fa-clock-o"></i> Thứ 5,ngày 19,2020</span>
+                                </a>
+                                <a href="#" class="fb-item">
+                                    <h6>Làm sao để vượt qua stress ? </h6>
+                                    <span class="blog-time"><i class="fa fa-clock-o"></i> Thứ 5,ngày 19,2020</span>
+                                </a>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="footer-widget">
-                        <h5>Get Info</h5>
-                        <ul class="footer-info">
-                            <li>
-                                <i class="fa fa-phone"></i>
-                                <span>SĐT đường dây nóng:</span>
-                                0353 005 670
-                            </li>
-                            <li>
-                                <i class="fa fa-envelope-o"></i>
-                                <span>Email:</span>
-                                contact.hoangdaothuy@mindx.edu.vn
-                            </li>
-                            <li>
-                                <i class="fa fa-map-marker"></i>
-                                <span>Địa chỉ</span>
-                                29 T1 Hoàng Đạo Thúy
-                            </li>
-                        </ul>
+                    <div class="col-lg-2">
+                        <div class="footer-widget">
+                            <h5>Chương trình</h5>
+                            <ul class="workout-program">
+                                <li><a href="#">Tư vấn</a></li>
+                                <li><a href="#">Khám sức khỏe</a></li>
+                                <li><a href="#">Chăm sóc sức khỏe</a></li>
+                                <li><a href="#">Thiết bị y tế</a></li>
+                                <li><a href="#">Thực phẩm</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="footer-widget">
+                            <h5>Liên hệ:</h5>
+                            <ul class="footer-info">
+                                <li>
+                                    <i class="fa fa-phone"></i>
+                                    <span>Số điện thoại:</span>
+                                    038.642.5197
+                                </li>
+                                <li>
+                                    <i class="fa fa-envelope-o"></i>
+                                    <span>Email:</span>
+                                    preventcovid_19@gmail.com
+                                </li>
+                                <li>
+                                    <i class="fa fa-map-marker"></i>
+                                    <span>Địa chỉ:</span>
+                                    Số 1, Đê La Thành, Hà Nội
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+           
+        </footer>
         
         </div>
     </footer>
