Sua css phan quiz trang thong tin

--- a/activar/home.html
+++ b/activar/home.html
@@ -54,12 +54,12 @@
                             <li><a href="./triệu chứng.html">Triệu chứng</a></li>
                             <li><a href="./phòng chống.html">Phòng chống</a></li>
                             <li><a href="./blog.html">Liên hệ</a>
-                                <ul class="dropdown">
+                                <!-- <ul class="dropdown">
                                     <li><a href="./about-us.html">About Us</a></li>
                                     <li><a href="./blog-single.html">Blog Details</a></li>
-                                </ul>
+                                </ul> -->
                             </li>
-                            <li><a href="./contact.html">Contacts</a></li>
+                            <!-- <li><a href="./contact.html">Contacts</a></li> -->
                         </ul>
                     </nav>
                 </div>
