--- a/activar/test2.html
+++ b/activar/test2.html
@@ -32,17 +32,17 @@
     </div>
 
     <!-- Header Section Begin -->
-    <header class="header-section header-normal">
+    <header class="header-section">
         <div class="container-fluid">
-            <div class="logo kickthuoc">
-                <a href="./index.html">
-                    <img src="img/LOGO-MINDX.png" alt="">
+            <div class="logo">
+                <a href="./home.html">
+                    <img src="img/LOGO_1.png" alt="">
                 </a>
             </div>
             <div class="top-social">
                 <a href="#"><i class="fa fa-pinterest-p"></i></a>
                 <a href="#"><i class="fa fa-linkedin"></i></a>
-                <a href="#"><i class="fa fa-pinterest-p"></i></a>
+                <!-- <a href="#"><i class="fa fa-pinterest-p"></i></a> -->
                 <a href="#"><i class="fa fa-youtube-play"></i></a>
                 <a href="#"><i class="fa fa-instagram"></i></a>
             </div>
@@ -55,12 +55,12 @@
                             <li><a href="./triệu chứng.html">Triệu chứng</a></li>
                             <li><a href="./phòng chống.html">Phòng chống</a></li>
                             <li><a href="./blog.html">Liên hệ</a>
-                                <ul class="dropdown">
-                                    <li><a href="./about-us.html">Thông tin</a></li>
+                                <!-- <ul class="dropdown">
+                                    <li><a href="./about-us.html">About Us</a></li>
                                     <li><a href="./blog-single.html">Blog Details</a></li>
-                                </ul>
+                                </ul> -->
                             </li>
-                            <li><a href="./contact.html">Contacts</a></li>
+                            <!-- <li><a href="./contact.html">Contacts</a></li> -->
                         </ul>
                     </nav>
                 </div>
