--- a/activar/home.html
+++ b/activar/home.html
@@ -34,8 +34,8 @@
     <header class="header-section">
         <div class="container-fluid">
             <div class="logo">
-                <a href="./index.html">
-                    <img src="img/logo.png" alt="">
+                <a href="./home.html">
+                    <img src="img/LOGO_1.png" alt="">
                 </a>
             </div>
             <div class="top-social">
@@ -103,7 +103,6 @@
     </section>
     <!-- Hero End -->
     <div id="Corona_prevent_video_container">
-
         <iframe class="video_child" src='https://www.vlive.tv/embed/180468?autoPlay=false' frameborder='no'
             scrolling='no' marginwidth='0' marginheight='0' allowfullscreen></iframe>
         <iframe class="video_child" src='https://www.vlive.tv/embed/180320?autoPlay=false' frameborder='no'
