SUA HEADER VA FOOTER

--- a/activar/blog.html
+++ b/activar/blog.html
@@ -31,43 +31,37 @@
     </div>
 
     <!-- Header Section Begin -->
-    <header class="header-section header-normal">
-        <div class="container-fluid">
-            <div class="logo">
-                <a href="./index.html">
-                    <img src="img/logo.png" alt="">
-                </a>
-            </div>
-            <div class="top-social">
-                <a href="#"><i class="fa fa-pinterest-p"></i></a>
-                <a href="#"><i class="fa fa-linkedin"></i></a>
-                <a href="#"><i class="fa fa-pinterest-p"></i></a>
-                <a href="#"><i class="fa fa-youtube-play"></i></a>
-                <a href="#"><i class="fa fa-instagram"></i></a>
-            </div>
-            <div class="container">
-                <div class="nav-menu">
-                    <nav class="mainmenu mobile-menu">
-                        <ul>
-                            <li><a href="./index.html">Home</a></li>
-                            <li><a href="./about-us.html">Thông tin</a></li>
-                            <li><a href="./schedule.html">Triệu chứng</a></li>
-                            <li><a href="./gallery.html">Phòng chống</a></li>
-                            <li class="active"><a href="./blog.html">Liên hệ</a>
-                                <ul class="dropdown">
-                                    <li><a href="./about-us.html">Thông tin</a></li>
-                                    <li><a href="./blog-single.html">Blog Details</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="./contact.html">Contacts</a></li>
-                        </ul>
-                    </nav>
-                </div>
-            </div>
-            <div id="mobile-menu-wrap"></div>
+<header class="header-section header-normal">
+    <div class="container-fluid">
+        <div class="logo">
+            <a href="./home.html">
+                <img src="img/LOGO_1.png" alt="">
+            </a>
         </div>
-    </header>
-    <!-- Header End -->
+        <div class="top-social">
+            <a href="#"><i class="fa fa-pinterest-p"></i></a>
+            <a href="#"><i class="fa fa-linkedin"></i></a>
+            <a href="#"><i class="fa fa-pinterest-p"></i></a>
+            <a href="#"><i class="fa fa-youtube-play"></i></a>
+            <a href="#"><i class="fa fa-instagram"></i></a>
+        </div>
+        <div class="container">
+            <div class="nav-menu">
+                <nav class="mainmenu mobile-menu">
+                    <ul>
+                        <li><a href="./home.html">Home</a></li>
+                        <li><a href="./thông tin.html">Thông tin</a></li>
+                        <li><a href="./triệu chứng.html">Triệu chứng</a></li>
+                        <li><a href="./phòng chống.html">Phòng chống</a></li>
+                        <li class="active"><a href="./blog.html">Liên hệ</a>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        <div id="mobile-menu-wrap"></div>
+    </div>
+</header>
+<!-- Header End -->
 
     <!-- Breadcrumb Section Begin -->
     <section class="breadcrumb-section set-bg spad" data-setbg="img/about-bread.jpg">
