--- a/activar/home.html
+++ b/activar/home.html
@@ -176,7 +176,7 @@
                     <div class="footer-logo-item">
                         <div class="f-logo">
                             <!-- LOGO -->
-                            <a href="#"><img src="" alt=""></a>
+                            <a href="#"><img src="./img/LOGO_1.png" alt=""></a>
                             <!-- LOGO -->
                         </div>
                         <p>Chúng tôi xin cam kết sẽ đem lại những thông tin chính xác nhất và được cập nhật liên tục về
@@ -235,19 +235,7 @@
                 </div>
             </div>
         </div>
-        <div class="copyright-text">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12 text-center">
-                        <div class="ct-inside">
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                            Copyright &copy;
-                            <script>document.write(new Date().getFullYear());</script> All rights reserved| <a
-                                href="https://colorlib.com/wp/templates/">Made with Colorlib</a> </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        
     </footer>
     <!-- Footer Section End -->
 
