--- a/activar/triệu chứng.html
+++ b/activar/triệu chứng.html
@@ -32,44 +32,38 @@
         <div class="loader"></div>
     </div>
 
-    <!-- Header Section Begin -->
-    <header class="header-section">
-        <div class="container-fluid">
-            <div class="logo">
-                <a href="./home.html">
-                    <img src="img/LOGO_1.png" alt="">
-                </a>
-            </div>
-            <div class="top-social">
-                <a href="#"><i class="fa fa-pinterest-p"></i></a>
-                <a href="#"><i class="fa fa-linkedin"></i></a>
-                <!-- <a href="#"><i class="fa fa-pinterest-p"></i></a> -->
-                <a href="#"><i class="fa fa-youtube-play"></i></a>
-                <a href="#"><i class="fa fa-instagram"></i></a>
-            </div>
-            <div class="container">
-                <div class="nav-menu">
-                    <nav class="mainmenu mobile-menu">
-                        <ul>
-                            <li class="active"><a href="./home.html">Home</a></li>
-                            <li><a href="./thông tin.html">Thông tin</a></li>
-                            <li><a href="./triệu chứng.html">Triệu chứng</a></li>
-                            <li><a href="./phòng chống.html">Phòng chống</a></li>
-                            <li><a href="./blog.html">Liên hệ</a>
-                                <!-- <ul class="dropdown">
-                                    <li><a href="./about-us.html">About Us</a></li>
-                                    <li><a href="./blog-single.html">Blog Details</a></li>
-                                </ul> -->
-                            </li>
-                            <!-- <li><a href="./contact.html">Contacts</a></li> -->
-                        </ul>
-                    </nav>
-                </div>
-            </div>
-            <div id="mobile-menu-wrap"></div>
+<!-- Header Section Begin -->
+<header class="header-section header-normal">
+    <div class="container-fluid">
+        <div class="logo">
+            <a href="./home.html">
+                <img src="img/LOGO_1.png" alt="">
+            </a>
         </div>
-    </header>
-    <!-- Header End -->
+        <div class="top-social">
+            <a href="#"><i class="fa fa-pinterest-p"></i></a>
+            <a href="#"><i class="fa fa-linkedin"></i></a>
+            <a href="#"><i class="fa fa-pinterest-p"></i></a>
+            <a href="#"><i class="fa fa-youtube-play"></i></a>
+            <a href="#"><i class="fa fa-instagram"></i></a>
+        </div>
+        <div class="container">
+            <div class="nav-menu">
+                <nav class="mainmenu mobile-menu">
+                    <ul>
+                        <li><a href="./home.html">Home</a></li>
+                        <li><a href="./thông tin.html">Thông tin</a></li>
+                        <li><a href="./triệu chứng.html">Triệu chứng</a></li>
+                        <li><a href="./phòng chống.html">Phòng chống</a></li>
+                        <li class="active"><a href="./blog.html">Liên hệ</a>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        <div id="mobile-menu-wrap"></div>
+    </div>
+</header>
+<!-- Header End -->
 
     <!-- Breadcrumb Section Begin -->
     <section class="breadcrumb-section set-bg spad" data-setbg="img/bgtrieuchung.jpg">
@@ -189,7 +183,9 @@
                 <div class="col-lg-3">
                     <div class="footer-logo-item">
                         <div class="f-logo">
-                            <a href="#"><img src="img/LOGO-MINDX.png.png" alt=""></a>
+                            <!-- LOGO -->
+                            <a href="#"><img src="./img/LOGO_1.png" alt=""></a>
+                            <!-- LOGO -->
                         </div>
                         <p>Chúng tôi xin cam kết sẽ đem lại những thông tin chính xác nhất và được cập nhật liên tục về
                             dịch bệnh SARS-COV-2 trên Việt Nam và toàn thế giới.</p>
@@ -222,18 +218,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-2">
-                    <div class="footer-widget">
-                        <h5>Chương trình</h5>
-                        <ul class="workout-program">
-                            <li><a href="#">Tư vấn</a></li>
-                            <li><a href="#">Khám sức khỏe</a></li>
-                            <li><a href="#">Chăm sóc sức khỏe</a></li>
-                            <li><a href="#">Thiết bị y tế</a></li>
-                            <li><a href="#">Thực phẩm</a></li>
-                        </ul>
-                    </div>
-                </div>
+               
                 <div class="col-lg-3">
                     <div class="footer-widget">
                         <h5>Liên hệ:</h5>
@@ -258,6 +243,7 @@
                 </div>
             </div>
         </div>
+        
     </footer>
     <!-- Footer Section End -->
 
