--- a/activar/test1.html
+++ b/activar/test1.html
@@ -31,45 +31,38 @@
         <div class="loader"></div>
     </div>
 
-    <!-- Header Section Begin -->
-    <header class="header-section">
-        <div class="container-fluid">
-            <div class="logo">
-                <a href="./home.html">
-                    <img src="img/LOGO_1.png" alt="">
-                </a>
-            </div>
-            <div class="top-social">
-                <a href="#"><i class="fa fa-pinterest-p"></i></a>
-                <a href="#"><i class="fa fa-linkedin"></i></a>
-                <!-- <a href="#"><i class="fa fa-pinterest-p"></i></a> -->
-                <a href="#"><i class="fa fa-youtube-play"></i></a>
-                <a href="#"><i class="fa fa-instagram"></i></a>
-            </div>
-            <div class="container">
-                <div class="nav-menu">
-                    <nav class="mainmenu mobile-menu">
-                        <ul>
-                            <li class="active"><a href="./home.html">Home</a></li>
-                            <li><a href="./thông tin.html">Thông tin</a></li>
-                            <li><a href="./triệu chứng.html">Triệu chứng</a></li>
-                            <li><a href="./phòng chống.html">Phòng chống</a></li>
-                            <li><a href="./blog.html">Liên hệ</a>
-                                <!-- <ul class="dropdown">
-                                    <li><a href="./about-us.html">About Us</a></li>
-                                    <li><a href="./blog-single.html">Blog Details</a></li>
-                                </ul> -->
-                            </li>
-                            <!-- <li><a href="./contact.html">Contacts</a></li> -->
-                        </ul>
-                    </nav>
-                </div>
-            </div>
-            <div id="mobile-menu-wrap"></div>
+<!-- Header Section Begin -->
+<header class="header-section header-normal">
+    <div class="container-fluid">
+        <div class="logo">
+            <a href="./home.html">
+                <img src="img/LOGO_1.png" alt="">
+            </a>
         </div>
-    </header>
-    <!-- Header End -->
-
+        <div class="top-social">
+            <a href="#"><i class="fa fa-pinterest-p"></i></a>
+            <a href="#"><i class="fa fa-linkedin"></i></a>
+            <a href="#"><i class="fa fa-pinterest-p"></i></a>
+            <a href="#"><i class="fa fa-youtube-play"></i></a>
+            <a href="#"><i class="fa fa-instagram"></i></a>
+        </div>
+        <div class="container">
+            <div class="nav-menu">
+                <nav class="mainmenu mobile-menu">
+                    <ul>
+                        <li><a href="./home.html">Home</a></li>
+                        <li><a href="./thông tin.html">Thông tin</a></li>
+                        <li><a href="./triệu chứng.html">Triệu chứng</a></li>
+                        <li><a href="./phòng chống.html">Phòng chống</a></li>
+                        <li class="active"><a href="./blog.html">Liên hệ</a>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        <div id="mobile-menu-wrap"></div>
+    </div>
+</header>
+<!-- Header End -->
     <!-- Aboutus Section Begin -->
     <section class="aboutus-section spad">
         <div class="container">
@@ -275,150 +268,69 @@
                 <div class="col-lg-3">
                     <div class="footer-logo-item">
                         <div class="f-logo">
-                            <a href="#"><img src="img/LOGO-MINDX.png" alt=""></a>
+                            <!-- LOGO -->
+                            <a href="#"><img src="./img/LOGO_1.png" alt=""></a>
+                            <!-- LOGO -->
                         </div>
-                        <p>Chúng tôi xin cam kết sẽ đem lại những thông tin chính xác nhất
-                            và được cập nhật liên tục về dịch bệnh SARS-COV-2 trên Việt Nam và toàn thế giới.
-                        </p>
+                        <p>Chúng tôi xin cam kết sẽ đem lại những thông tin chính xác nhất và được cập nhật liên tục về
+                            dịch bệnh SARS-COV-2 trên Việt Nam và toàn thế giới.</p>
+                        <div class="social-links">
+                            <h6>Follow us</h6>
+                            <a href="#"><i class="fa fa-facebook"></i></a>
+                            <a href="#"><i class="fa fa-twitter"></i></a>
+                            <a href="#"><i class="fa fa-google-plus"></i></a>
+                            <a href="#"><i class="fa fa-linkedin"></i></a>
+                            <a href="#"><i class="fa fa-instagram"></i></a>
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-3 offset-lg-1">
                     <div class="footer-widget">
-                        <h5>Our Blog</h5>
+                        <h5>Các bài viết</h5>
                         <div class="footer-blog">
                             <a href="#" class="fb-item">
-                                <h6>Most people who work</h6>
-                                <span class="blog-time"><i class="fa fa-clock-o"></i> Jan 02, 2019</span>
+                                <h6>Cách hiệu quả phòng chống bệnh</h6>
+                                <span class="blog-time"><i class="fa fa-clock-o"></i> Thứ 5,ngày 19,2020</span>
                             </a>
                             <a href="#" class="fb-item">
-                                <h6>Freelance Design Tricks How </h6>
-                                <span class="blog-time"><i class="fa fa-clock-o"></i> Jan 02, 2019</span>
+                                <h6>Làm sao để tránh bị ốm?</h6>
+                                <span class="blog-time"><i class="fa fa-clock-o"></i> Thứ 5,ngày 19,2020</span>
                             </a>
                             <a href="#" class="fb-item">
-                                <h6>have a computer at home have had </h6>
-                                <span class="blog-time"><i class="fa fa-clock-o"></i> Jan 02, 2019</span>
+                                <h6>Làm sao để vượt qua stress ? </h6>
+                                <span class="blog-time"><i class="fa fa-clock-o"></i> Thứ 5,ngày 19,2020</span>
                             </a>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-2">
-                    <div class="footer-widget">
-                        <h5>Program</h5>
-                        <ul class="workout-program">
-                            <li><a href="#">Bodybuilding</a></li>
-                            <li><a href="#">Running</a></li>
-                            <li><a href="#">Streching</a></li>
-                            <li><a href="#">Weight Loss</a></li>
-                            <li><a href="#">Gym Fitness</a></li>
-                        </ul>
-                    </div>
-                </div>
+               
                 <div class="col-lg-3">
                     <div class="footer-widget">
-                        <h5>Get Info</h5>
+                        <h5>Liên hệ:</h5>
                         <ul class="footer-info">
                             <li>
                                 <i class="fa fa-phone"></i>
-                                <span>SĐT đường dây nóng:</span>
-                                0353 005 670
+                                <span>Số điện thoại:</span>
+                                038.642.5197
                             </li>
                             <li>
                                 <i class="fa fa-envelope-o"></i>
                                 <span>Email:</span>
-                                contact.hoangdaothuy@mindx.edu.vn
+                                preventcovid_19@gmail.com
                             </li>
                             <li>
                                 <i class="fa fa-map-marker"></i>
-                                <span>Địa chỉ</span>
-                                29 T1 Hoàng Đạo Thúy
+                                <span>Địa chỉ:</span>
+                                Số 1, Đê La Thành, Hà Nội
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
-
-        </div> <!-- Footer Section Begin -->
-        <footer class="footer-section">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-3">
-                        <div class="footer-logo-item">
-                            <div class="f-logo">
-                                <!-- LOGO -->
-                                <a href="#"><img src="" alt=""></a>
-                                <!-- LOGO -->
-                            </div>
-                            <p>Chúng tôi xin cam kết sẽ đem lại những thông tin chính xác nhất và được cập nhật liên tục
-                                về
-                                dịch bệnh SARS-COV-2 trên Việt Nam và toàn thế giới.</p>
-                            <div class="social-links">
-                                <h6>Follow us</h6>
-                                <a href="#"><i class="fa fa-facebook"></i></a>
-                                <a href="#"><i class="fa fa-twitter"></i></a>
-                                <a href="#"><i class="fa fa-google-plus"></i></a>
-                                <a href="#"><i class="fa fa-linkedin"></i></a>
-                                <a href="#"><i class="fa fa-instagram"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 offset-lg-1">
-                        <div class="footer-widget">
-                            <h5>Các bài viết</h5>
-                            <div class="footer-blog">
-                                <a href="#" class="fb-item">
-                                    <h6>Cách hiệu quả phòng chống bệnh</h6>
-                                    <span class="blog-time"><i class="fa fa-clock-o"></i> Thứ 5,ngày 19,2020</span>
-                                </a>
-                                <a href="#" class="fb-item">
-                                    <h6>Làm sao để tránh bị ốm?</h6>
-                                    <span class="blog-time"><i class="fa fa-clock-o"></i> Thứ 5,ngày 19,2020</span>
-                                </a>
-                                <a href="#" class="fb-item">
-                                    <h6>Làm sao để vượt qua stress ? </h6>
-                                    <span class="blog-time"><i class="fa fa-clock-o"></i> Thứ 5,ngày 19,2020</span>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-2">
-                        <div class="footer-widget">
-                            <h5>Chương trình</h5>
-                            <ul class="workout-program">
-                                <li><a href="#">Tư vấn</a></li>
-                                <li><a href="#">Khám sức khỏe</a></li>
-                                <li><a href="#">Chăm sóc sức khỏe</a></li>
-                                <li><a href="#">Thiết bị y tế</a></li>
-                                <li><a href="#">Thực phẩm</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-lg-3">
-                        <div class="footer-widget">
-                            <h5>Liên hệ:</h5>
-                            <ul class="footer-info">
-                                <li>
-                                    <i class="fa fa-phone"></i>
-                                    <span>Số điện thoại:</span>
-                                    038.642.5197
-                                </li>
-                                <li>
-                                    <i class="fa fa-envelope-o"></i>
-                                    <span>Email:</span>
-                                    preventcovid_19@gmail.com
-                                </li>
-                                <li>
-                                    <i class="fa fa-map-marker"></i>
-                                    <span>Địa chỉ:</span>
-                                    Số 1, Đê La Thành, Hà Nội
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </footer>
-        <!-- Footer Section End -->
+        
+    </footer>
+    <!-- Footer Section End -->
 
         <!-- Js Plugins -->
         <script src="js/jquery-3.3.1.min.js"></script>
