--- a/activar/phòng chống.html
+++ b/activar/phòng chống.html
@@ -352,7 +352,7 @@
                     <div class="footer-logo-item">
                         <div class="f-logo">
                             <!-- LOGO -->
-                            <a href="#"><img src="" alt=""></a>
+                            <a href="#"><img src="img/LOGO_2.png" alt=""></a>
                             <!-- LOGO -->
                         </div>
                         <p>Chúng tôi xin cam kết sẽ đem lại những thông tin chính xác nhất và được cập nhật liên tục về
