--- a/activar/thông tin.html
+++ b/activar/thông tin.html
@@ -70,7 +70,7 @@
     <!-- Header End -->
 
     <!-- Breadcrumb Section Begin -->
-    <!-- <section class="breadcrumb-section set-bg spad" data-setbg="img/cov19.1.jpg">
+    < <section class="breadcrumb-section set-bg spad" data-setbg="img/cov19.1.jpg">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -244,7 +244,7 @@
                         <div class="footer-logo-item">
                             <div class="f-logo">
                                 <!-- LOGO -->
-                                <a href="#"><img src="" alt=""></a>
+                                <a href="#"><img src="img/LOGO_2.png" alt=""></a>
                                 <!-- LOGO -->
                             </div>
                             <p>Chúng tôi xin cam kết sẽ đem lại những thông tin chính xác nhất và được cập nhật liên tục về
