--- a/activar/triệu chứng.html
+++ b/activar/triệu chứng.html
@@ -189,7 +189,7 @@
                 <div class="col-lg-3">
                     <div class="footer-logo-item">
                         <div class="f-logo">
-                            <a href="#"><img src="img/LOGO-MINDX.png.png" alt=""></a>
+                            <a href="#"><img src="img/LOGO_2.png" alt=""></a>
                         </div>
                         <p>Chúng tôi xin cam kết sẽ đem lại những thông tin chính xác nhất và được cập nhật liên tục về
                             dịch bệnh SARS-COV-2 trên Việt Nam và toàn thế giới.</p>
