Them product.html; Chuyen phan quiz va connect.html sang home.html

--- a/activar/connect.html
+++ b/activar/connect.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="connect.css">
+    <link rel="stylesheet" href="./css/connect.css">
     <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
 </head>
 <body class="bg">
@@ -19,7 +19,7 @@
 
 
         <div class="display-flex">
-            <img src="doctor2.png" alt="" id="doctor">
+            <img src="./img/doctor2.png" alt="" id="doctor">
 
             <div id="box-connect">
                 <h1 id="call" class="font">ĐƯỜNG DÂY NÓNG</h1>
@@ -30,21 +30,18 @@
                     <h1 id="phone" class="font">19003228 </h1>
                 </div>
 
-<<<<<<< HEAD
-=======
                 <div class="display-inline">
                         <div class="display-block">
-                            <img src="NCOVI 2 đã sửa.png" alt="">
-                            <img src="NCOVI đã sửa.jpg" alt="">
+                            <img src="./img/NCOVI 2 đã sửa.png" alt="">
+                            <img src="./img/NCOVI đã sửa.jpg" alt="">
                         </div>
                         
                         <div class="display-block" >
-                            <img src="Sức khỏe việt nam 2 đã sửa.png" alt="">
-                            <img src="Sức khỏe Việt Nam đã sửa.jpg" alt="">
+                            <img src="./img/Sức khỏe việt nam 2 đã sửa.png" alt="">
+                            <img src="./img/Sức khỏe Việt Nam đã sửa.jpg" alt="">
                             
                         </div>
                 </div>
->>>>>>> 9920749961f53361c5e4488fcf58390c5d59d973
             </div>
         </div>
 
