--- a/activar/thông tin.html
+++ b/activar/thông tin.html
@@ -71,7 +71,7 @@
                     <div class="breadcrumb-text">
                         <h2>Thông tin</h2>
                         <div class="breadcrumb-controls">
-                            <a href="#"><i class="fa fa-home"></i> Home</a>
+                            <a href="home.html"><i class="fa fa-home"></i> Home</a>
                             <span>Thông tin</span>
                         </div>
                     </div>
@@ -171,64 +171,6 @@
         </div>
     </section>
     <!-- Testimonial Section End -->
-
-    <!-- Trainer Section Begin -->
-    <section class="trainer-section spad">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="section-title">
-                        <h2>SC2 Quest</h2>
-                        <p>Bạn đã đủ hiểu về dịch bệnh NCoV? hãy cùng kiếm tra qua các bài test của chúng tôi</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-3 col-sm-6">
-                    <div class="trainer-item">
-                        <div class="ti-pic">
-                            <img src="img/test1.png" alt="">
-                            <a href="test1.html">
-                                <button class="btn"><h3>Rửa, vệ sinh tay đúng cách</h3></button>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6">
-                    <div class="trainer-item">
-                        <div class="ti-pic">
-                            <img src="img/test2.png" alt="">
-                            <a href="test2.html">
-                                <button class="btn"><h3>Đeo khẩu trang đúng cách</h3></button>
-                            </a>    
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6">
-                    <div class="trainer-item">
-                        <div class="ti-pic">
-                            <img src="img/test3.png" alt="">
-                            <a href="test3.html">
-                                <button class="btn"><h3>Hiểu đúng về virus corana</h3></button>
-                            </a>                            
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6">
-                    <div class="trainer-item">
-                        <div class="ti-pic">
-                            <img src="img/test4.png" alt="">
-                            <a href="test4.html">
-                                <button class="btn"><h3>Phòng virus trong gia đình</h3></button>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Trainer Section End -->
-
 
         <!-- Footer Section Begin -->
     <footer class="footer-section">
