--- a/activar/triệu chứng.html
+++ b/activar/triệu chứng.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Activitar, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Activitar | Template</title>
+    <title>Triệu chứng</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,600,700,800,900&display=swap" rel="stylesheet">
@@ -74,7 +74,7 @@
                     <div class="breadcrumb-text">
                         <h2>TRIỆU CHỨNG</h2>
                         <div class="breadcrumb-controls">
-                            <a href="#"><i class="fa fa-home"></i> Home</a>
+                            <a href="home.html"><i class="fa fa-home"></i> Home</a>
                             <span>Triệu chứng</span>
                         </div>
                     </div>
