--- a/activar/home.html
+++ b/activar/home.html
@@ -54,7 +54,7 @@
                             <li><a href="./thông tin.html">Thông tin</a></li>
                             <li><a href="./triệu chứng.html">Triệu chứng</a></li>
                             <li><a href="./phòng chống.html">Phòng chống</a></li>
-                            <li><a href="./blog.html">Liên hệ</a>
+                            <li><a href="./product.html">Sản phẩm</a>
                                 <!-- <ul class="dropdown">
                                     <li><a href="./about-us.html">About Us</a></li>
                                     <li><a href="./blog-single.html">Blog Details</a></li>
