--- a/activar/test1.html
+++ b/activar/test1.html
@@ -54,7 +54,7 @@
                         <li><a href="./thông tin.html">Thông tin</a></li>
                         <li><a href="./triệu chứng.html">Triệu chứng</a></li>
                         <li><a href="./phòng chống.html">Phòng chống</a></li>
-                        <li class="active"><a href="./blog.html">Liên hệ</a>
+                        <li class="active"><a href="./product.html">Sản phẩm</a>
                     </ul>
                 </nav>
             </div>
