--- a/activar/home.html
+++ b/activar/home.html
@@ -136,12 +136,9 @@
 
     <!-- Video Section Begin-->
     <div id="Corona_prevent_video_container">
-        <iframe class="video_child" src='https://www.vlive.tv/embed/180468?autoPlay=false' frameborder='no'
-            scrolling='no' marginwidth='0' marginheight='0' allowfullscreen></iframe>
-        <iframe class="video_child" src='https://www.vlive.tv/embed/180320?autoPlay=false' frameborder='no'
-            scrolling='no' marginwidth='0' marginheight='0' allowfullscreen></iframe>
-        <iframe class="video_child" src='https://www.vlive.tv/embed/180803?autoPlay=false' frameborder='no'
-            scrolling='no' marginwidth='0' marginheight='0' allowfullscreen></iframe>
+        <iframe class="video_child" src="https://www.youtube.com/embed/JV9MeSiRxBI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe class="video_child" src="https://www.youtube.com/embed/BtulL3oArQw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe class="video_child" src="https://www.youtube.com/embed/77DYugD7e9o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     <!-- Video Section End-->
 
