--- a/activar/home.html
+++ b/activar/home.html
@@ -233,13 +233,13 @@
 
                 <div class="display-inline">
                     <div class="display-block">
-                        <img src="./img/NCOVI 2 đã sửa.png" alt="">
-                        <img src="./img/NCOVI đã sửa.jpg" alt="">
+                        <a href="https://play.google.com/store/apps/details?id=com.vnptit.innovation.ncovi"><img src="./img/NCOVI 2 đã sửa.png" alt=""></a>
+                        <a href="https://apps.apple.com/app/id1501934178"><img src="./img/NCOVI đã sửa.jpg" alt=""></a>
                     </div>
 
                     <div class="display-block">
-                        <img src="./img/Sức khỏe việt nam 2 đã sửa.png" alt="">
-                        <img src="./img/Sức khỏe Việt Nam đã sửa.jpg" alt="">
+                        <a href="https://play.google.com/store/apps/details?id=vn.suckhoetoandan.v2"><img src="./img/Sức khỏe việt nam 2 đã sửa.png" alt=""></a>
+                        <a href="https://apps.apple.com/app/id1489263065"><img src="./img/Sức khỏe Việt Nam đã sửa.jpg" alt=""></a>
 
                     </div>
                 </div>
